[gd_scene load_steps=17 format=3 uid="uid://obju20n54n4q"]

[ext_resource type="Texture2D" uid="uid://x1b7vuk5ljq5" path="res://addons/kenney_prototype_textures/dark/texture_01.png" id="1_sxvvi"]
[ext_resource type="Script" uid="uid://dk3kiml8jf427" path="res://scripts/ui/network_world.gd" id="1_v7jeb"]
[ext_resource type="Texture2D" uid="uid://dvs1ljbm6k8im" path="res://addons/kenney_prototype_textures/orange/texture_02.png" id="3_cpo0o"]
[ext_resource type="Texture2D" uid="uid://tti8il6bxm21" path="res://addons/kenney_prototype_textures/purple/texture_02.png" id="4_kxbxg"]
[ext_resource type="Script" uid="uid://dsuiviut0pevj" path="res://scripts/ui/ui_game_chat.gd" id="5_yvmxy"]
[ext_resource type="PackedScene" uid="uid://b76sn23nf11kw" path="res://scenes/ui/ui_message.tscn" id="6_aapmh"]
[ext_resource type="Script" uid="uid://dt3ktr7a7qefm" path="res://scenes/ui/ui_game_menu.gd" id="7_aapmh"]
[ext_resource type="PackedScene" uid="uid://dver0lifwtuu3" path="res://scenes/ui/ui_settings.tscn" id="8_n4jqt"]
[ext_resource type="PackedScene" uid="uid://djstfyl4t00on" path="res://ui/ui_server_disconnected.tscn" id="9_8q2ku"]
[ext_resource type="Script" uid="uid://tscw7nscxt0a" path="res://scripts/game/spawn_manager.gd" id="10_373o7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_4xowi"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_a202f"]
sky_material = SubResource("ProceduralSkyMaterial_4xowi")

[sub_resource type="Environment" id="Environment_noarx"]
background_mode = 2
sky = SubResource("Sky_a202f")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_noarx"]
albedo_texture = ExtResource("1_sxvvi")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yvmxy"]
albedo_texture = ExtResource("3_cpo0o")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aapmh"]
albedo_texture = ExtResource("4_kxbxg")
uv1_triplanar = true

[node name="Level" type="Node3D"]
script = ExtResource("1_v7jeb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_noarx")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
size = Vector3(32, 1, 32)
material = SubResource("StandardMaterial3D_noarx")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -6.21623)
material = SubResource("StandardMaterial3D_yvmxy")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 7.12975)
material = SubResource("StandardMaterial3D_aapmh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.905635, 0.424057, 0, -0.424057, 0.905635, 0, 2.65157, 3.96826)

[node name="SpawnPoint" type="Node3D" parent="." groups=["spawnpoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.857, 0, 0)

[node name="SpawnPoint2" type="Node3D" parent="." groups=["spawnpoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.143, 0, 0)

[node name="SpawnPoint3" type="Node3D" parent="." groups=["spawnpoint"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.143, 0, 10)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Network:"

[node name="Label_NetworkType" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Network Type: Server"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player:"

[node name="Label_PlayerName" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player Name"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Health:"

[node name="Label_Health" type="Label" parent="CanvasLayer/Control/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "00"

[node name="UIChat" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("5_yvmxy")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UIChat"]
layout_mode = 0
offset_left = 9.0
offset_top = 479.0
offset_right = 263.0
offset_bottom = 644.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UIChat/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIChat/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/UIChat/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIChat/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="UIMessage" parent="CanvasLayer/UIChat/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("6_aapmh")]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/UIChat/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Test"

[node name="UIGameMenu" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_aapmh")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/UIGameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/UIGameMenu/CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UIGameMenu/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UIGameMenu/CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/UIGameMenu/CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " Quit "

[node name="UISettings" parent="CanvasLayer/UIGameMenu/CenterContainer/PanelContainer/VBoxContainer" instance=ExtResource("8_n4jqt")]
layout_mode = 2

[node name="UIServerDCAcceptDialog" type="AcceptDialog" parent="CanvasLayer"]
auto_translate_mode = 1
initial_position = 2
size = Vector2i(248, 183)
borderless = true
ok_button_text = "Okay"

[node name="Control" parent="CanvasLayer/UIServerDCAcceptDialog" instance=ExtResource("9_8q2ku")]
offset_left = 8.0
offset_top = 8.0
offset_right = 188.664
offset_bottom = 90.812

[node name="SpawnManager" type="Node" parent="." node_paths=PackedStringArray("spawnpoints") groups=["spawnmanager"]]
script = ExtResource("10_373o7")
spawnpoints = [NodePath("../SpawnPoint"), NodePath("../SpawnPoint2"), NodePath("../SpawnPoint3")]

[connection signal="text_submitted" from="CanvasLayer/UIChat/PanelContainer/MarginContainer/VBoxContainer/LineEdit" to="CanvasLayer/UIChat" method="_on_line_edit_text_submitted"]
